# docker-workshop-zoomcamp

./: DataIngestion.ipynb  README.md  draf  ingest_data.py  pyproject.toml
pipeline/: DataIngestion.ipynb  ingest_data.py  pyproject.toml
