[project]
name = "docker-workshop-zoomcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "psycopg2>=2.9.11",
    "pyarrow>=23.0.1",
    "scipy>=1.17.1",
    "sqlalchemy>=2.0.48",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pgcli>=4.4.0",
]
